Updated Deployment URL

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://trainingguru.github.io/web-react",
+  "homepage": "https://trainingguru.github.io/web-react",
   "name": "web-react",
   "version": "0.1.0",
   "private": true,
