--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://trainingguru.github.io/web-react",
   "name": "web-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
