--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "base-64": "^1.0.0",
     "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.4",
